objects/MeetingAttendee__c.object
<CustomObject>
    <description>SFDC1-863; Meeting Attendee Object to Capture details of the Attendees</description>
    <fields>
        <fullName>AttendeeName__c</fullName>
        <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Meeting Attendees</relationshipLabel>
        <relationshipName>MeetingAttendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <formula>MeetingNote__r.CreatedBy.FirstName + &quot; &quot; + MeetingNote__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>MeetingNote__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHSMarkitEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IHS Markit Employee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>Created as part for migration exercise to store unique identifier for legacy records</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Id for legacy records</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>Created as part of data migration go live preparation.</description>
        <externalId>true</externalId>
        <inlineHelpText>Id from the legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>Created as part of migration exercise to identify the system to which the legacy records relates with</description>
        <inlineHelpText>System from which the record was migrated</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarkitEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Markit Employee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MeetingNote__c</fullName>
        <label>Meeting Note</label>
        <referenceTo>MeetingNote__c</referenceTo>
        <relationshipLabel>Meeting Attendees</relationshipLabel>
        <relationshipName>MeetingAttendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PKIDMeetAtt__c</fullName>
        <description>SFDC1-2445 : Creating PK fields on Product related tables</description>
        <displayFormat>MtA{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID MeetAtt</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>TEXT(Contact__r.JobTitle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <formula>MeetingNote__r.When__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>When</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Where__c</fullName>
        <formula>MeetingNote__r.WhereFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Where</label>
        <type>Text</type>
    </fields>
    <label>Meeting Attendee</label>
    <nameField>
        <displayFormat>MAT-{000000000}</displayFormat>
        <label>Meeting Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>